R1.5.0      10-13-2020    Kukhee Kim (khkim)
                        - implement PID feedback NCO control

R1.4.0      09-23-2002    Kukhee Kim (khki)
                        - implement rms and average, valid and invalid counter

R1.3.0      09-03-2020    Kukhee Kim (khkim)
                        - build with pcavLib API R1.1.0
                        - add waveform data selector

R1.2.0      08-10-2020    Kukhee Kim (khkim)
                        - add BSA

R1.1.0      08-07-2020    Kukhee Kim (khkim)
                        - add slow time PVs and chage PVs, adding linear conversion

R1.0.0      08-06-2020    Kukkhee Kim (khkim)
                        - apply new register map, new data conversion
                        - build pcavLib R1.0.0

R0.0.0      07-18-2020    Kukhee Kim (khkim)
                        - Initial release for pcavAsyn epics module