@@ -1,3 +1,6 @@
+R1.6.0      10-23-2020    Kukhee Kim (khkim)
+                        - implement BSSS waveform (updating at beam reate)
+
 R1.5.0      10-13-2020    Kukhee Kim (khkim)
                         - implement PID feedback NCO control
 
